--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,36 +11,28 @@
             android:id="@+id/tv1"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="#49A3F5"
+            android:background="@color/orange"
             android:gravity="center"
             android:text="@string/app_name"
             android:textColor="#ffffff"
             android:textSize="20sp"
             tools:ignore="MissingConstraints" />
 
-        <ImageView
-            android:id="@+id/login_logo"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginTop="50dp"
-            android:background="#000"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv1" />
-
         <EditText
             android:id="@+id/et_user_name_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="40dp"
             android:hint="账号："
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginTop="150dp"
             android:imeOptions="actionNext"
             android:inputType="text"
             android:textColor="@android:color/black"
             android:textColorHint="#366685"
-            app:layout_constraintTop_toBottomOf="@+id/login_logo" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv1" />
 
         <EditText
             android:id="@+id/et_user_pwd_login"
@@ -83,7 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:background="#49A3F5"
+            android:background="@color/orange"
             android:text="点击登录"
             android:textSize="20sp"
             android:textColor="#ffffff"
