--- a/app/src/main/res/layout/fragment_scroll.xml
+++ b/app/src/main/res/layout/fragment_scroll.xml
@@ -13,14 +13,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="40dp"
-            android:max="100"
+            android:max="254"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:progress="50"
+            android:progress="0"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.499" />
 
         <ImageView
             android:id="@+id/imageView2"
